# turtlebot3_customization

./: Instructions  README.md
custom_task/: CMakeLists.txt  package.xml
custom_task/src/: half_way_spin_bt_node.cpp  half_way_spin_node.cpp
nav2_pure_pursuit_controller/: CMakeLists.txt  package.xml
nav2_pure_pursuit_controller/include/nav2_pure_pursuit_controller/: pure_pursuit_controller.hpp
nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
turtlebot3_gazebo/: package.xml
turtlebot3_gazebo/launch/: turtlebot3_room.launch.py
turtlebot3_gazebo/models/turtlebot3_house/: model.sdf
turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_gazebo/worlds/: turtlebot3_room.world
turtlebot3_navigation2/launch/: navigation2.launch.py
turtlebot3_navigation2/param/: waffle.yaml
